Fix oversized theme images on mobile

--- a/source/_assets/sass/_themes.scss
+++ b/source/_assets/sass/_themes.scss
@@ -15,6 +15,20 @@ $theme-offset: 10%;
 
 }
 
+// Add this into each theme, into whichever @media unstacks its elements
+@mixin reset-mobile-constraints() {
+
+	.image, .image img {
+
+		max-width: initial;
+		max-height: initial;
+
+		width: 100%;
+
+	}
+
+}
+
 // Common styles shared by all the themes
 section.theme {
 
@@ -57,11 +71,17 @@ section.theme {
 	.image {
 
 		text-align: center;
+		display: block;
 
-		&, img {
+		img {
 
 			display: block;
-			width: 100%;
+
+			// Reset this in larger @media for each theme
+			// Add width: 100% to .image, img
+			// See reset-mobile-constraints()
+			max-width: 100%;
+			max-height: 60vh;
 
 		}
 
@@ -155,6 +175,8 @@ section.theme-1.theme-portrait {
 
 	@media #{$mq-smaller} {
 
+		@include reset-mobile-constraints();
+
 		.wrapper {
 			flex-direction: row;
 		}
@@ -175,6 +197,8 @@ section.theme-1.theme-landscape {
 
 	@media #{$mq-small} {
 
+		@include reset-mobile-constraints();
+
 		.wrapper {
 			flex-wrap: nowrap;
 		}
@@ -183,6 +207,7 @@ section.theme-1.theme-landscape {
 			align-self: flex-end;
 			max-width: 65%;
 		}
+
 	}
 
 	@media #{$mq-smallish} {
@@ -209,6 +234,8 @@ section.theme-2 {
 	}
 
 	@media #{$mq-smaller} {
+
+		@include reset-mobile-constraints();
 
 		.wrapper {
 			flex-direction: row;
@@ -271,6 +298,8 @@ section.theme-3 {
 	}
 
 	@media #{$mq-smaller} {
+
+		@include reset-mobile-constraints();
 
 		.wrapper {
 			flex-direction: row;
@@ -338,6 +367,8 @@ section.theme-4 {
 	}
 
 	@media #{$mq-smaller} {
+
+		@include reset-mobile-constraints();
 
 		.wrapper {
 			flex-direction: row;
